[package]
name = "wot-serve"
version = "0.4.0"
edition = "2021"
description = "Web of Things (WoT) Thing server"
license = "MIT"
repository = "https://github.com/wot-rust/wot-serve"
keywords = ["wot", "WebofThings"]

[dependencies]
wot-td = "0.6.2"
mdns-sd = "0.13.0"
thiserror = "2.0"
if-addrs = "0.13.0"
hostname = "0.4"
axum = "0.7.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["v4"] }
datta = "0.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tokio = { version = "1.20.1", features = ["net"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

